--- a/package.json
+++ b/package.json
@@ -12,22 +12,24 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.0.6",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@types/styled-components": "^5.1.34",
     "framer-motion": "^11.11.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.13",
-    "typescript": "^5.6.3"
+    "react-rnd": "^10.4.13",
+    "react-zoom-pan-pinch": "^3.6.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/styled-components": "^5.1.34",
+    "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.6.3",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.5.1",
+    "typescript": "^5.6.3",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0",
-    "style-loader": "^3.3.1",
-    "css-loader": "^6.7.3"
+    "webpack-dev-server": "^5.1.0"
   }
 }
